--- a/index.html
+++ b/index.html
@@ -6,23 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Put your description here.">
   <base href="/">
-
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
-    }
-  </style>
   <title>my-website</title>
 </head>
 
 <body>
-  <my-website></my-website>
+  <site-desktop></site-desktop>
 
-  <script type="module" src="./src/my-website.js"></script>
+  <script type="module" src="./src/site-desktop.js"></script>
 </body>
 
 </html>
