added reflect true to all components

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <site-desktop theme="95"></site-desktop>
+  <site-desktop></site-desktop>
 
   <script type="module" src="./src/site-desktop.js"></script>
 </body>
