--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
+  <meta name="Description" content="Zach Dodson's personal website themed around various Windows operating systems.">
   <base href="/">
   <link rel="icon" type="image/png" href="favicon.ico">
-  <title>Welcome to my Website!</title>
+  <title>Zach's Website</title>
 </head>
 
 <body>
