vercel analytics html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <site-desktop></site-desktop>
 
   <script type="module" src="./src/site-desktop.js"></script>
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
